2016-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* demo/kf_cwpa_demo.R: Additional figure as optional output

2015-12-31  Dirk Eddelbuettel  <edd@debian.org>

	* tests/test_kfpredict.R: Do not run test on Windows
	* tests/test_kfupdate.R: Ditto
	* tests/test_ltidisc.R: Ditto
	* tests/test_rtssmooth.R: Ditto
	* tests/test_tfsmooth.R: Ditto

	* src/expmMat.cpp: Edits to manual page content to please R CMD check

	* DESCRIPTION: General edits to please R CMD check, Imports: updates
	* NAMESPACE: Updated importFrom to explicitly import expm::expm

2015-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated, added CWPA demo gifs

	* demo/kf_cwpa_demo.R: Finished with animated sequence plots
	* demo/kf_sine_demo.R: Updated to Cube use in smoother too

	* .travis.yml: Added Octave PPA to permit use of r-cran-rcppoctave

2015-12-21  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Added for Travis Continuous Integration, but for now
	exclude r-cran-rcppoctave which is currently uninstallable
	* tests/test_kfpredict.R: Now conditional on R
	* tests/test_kfupdate.R: Idem
	* tests/test_ltidisc.R: Idem
	* tests/test_rtssmooth.R: Idem
	* tests/test_tfsmooth.R: Idem

2015-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/tfsmooth.cpp: Added roxygen code for manual page
	* src/kfpredict.cpp: Idem
	* src/ltidisc.cpp: Idem
	* src/kfupdate.cpp: Added roxygen code, updated interface
	* src/rtssmooth.cpp: Idem
	* src/tfsmooth.cpp: Idem
	* src/rtssmooth.cpp: Use \dQuote{} and \sQuote{}

2015-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/rtssmooth.cpp: Return the cube P in result list, correct indexing,
	revert to const arguments
	* src/kfupdate.cpp: Revert to const first two arguments
	* src/tfsmooth.cpp: Ditto

2015-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/kfupdate.cpp: Non-const first two arguments, returning m and P

	* src/tfsmooth.cpp: Non-const first two arguments, returning m and P;
	correction in use of y argument
