@@ -1,38 +1,25 @@
-# Sample .travis.yml for R projects.
-#
-# See https://github.com/craigcitro/r-travis
-#     https://github.com/eddelbuettel/r-travis/
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
-
 sudo: required
-
 dist: trusty
 
-env:
-  global:
-    - _R_CHECK_FORCE_SUGGESTS_=FALSE
-    - R_BUILD_ARGS="--no-build-vignettes --no-manual"
-    - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
-
 before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-  # my PPA was needed at some point but I now think Michael's may have everything
-  - sudo add-apt-repository -y ppa:edd/misc
+  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  # add our launchpad repo which has (inter alia) r-cran-pinp
+  #- sudo add-apt-repository -y ppa:edd/r-3.5
   # we need this to make r-cran-rcppoctave work as it needs a more recent Octave from here
   - sudo add-apt-repository -y ppa:octave/stable
-  - sudo apt-get update -q
+  - ./run.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-rcpparmadillo r-cran-xts r-cran-expm r-cran-rcppoctave
+  - ./run.sh install_aptget r-cran-rcpp r-cran-rcpparmadillo r-cran-xts r-cran-expm r-cran-rcppoctave
 
 script: 
-  - ./travis-tool.sh run_tests
+  - ./run.sh run_tests
 
 after_failure:
-  - ./travis-tool.sh dump_logs
+  - ./run.sh dump_logs
 
 notifications:
   email:
